# coderhouse_spotify

./: README.md  pyproject.toml  secrets_key.json  spotipy_proyect_coder.py
