[tool.poetry]
name = "test for postgres"
version = "0.1.0"
description = ""
authors = ["Noel Gonzalez <noel.gonzalez@naranja.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.3"
spotipy = "^2.20.0"
pandas = "^1.4.3"
SQLAlchemy = "^1.4.40"
boto3 = "^1.24.53"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
